         file, similarly to CPU
  - Fix: direct CPU and DSP symbol traces to trace file, not stderr
  - Fix: ':once' option when there's only one breakpoint (v1.9 regression)
  - Fix: NatFeats NF_DEBUGGER command now actually drops to debugger
  - 'n' (next) command run until (dbcc backwards branch) loop exits
    (in addition to running until subroutine and exception calls return)

Other:
- Allow building without Zlib
- zip2st tool can convert directories to .st image files,
  not just .zip files.

Fixed demos:
- spec512 image in the Intro of the Place To Be Again (video, restart counter)
- Menu screen in the Place To Be Again (video, writing/reading video
  counter during active display)
- A Little Bit Insane by Lazer (no DMA sound during the demo)


 Version 1.9.0 (2015-09-10):
 ---------------------------

Emulation:
- STE Joypads:
  - Fix: Joypad A Option button
  - Fix: Joypad B extended buttons
- ACSI / IDE:
  - Fix: image file attribute check when using device files
  - Fix: v1.8 ACSI regression with A1=0 case
- GEMDOS HD:
  - Fix: matching exactly 8 chars long file names containing '.'
  - Better mapping of host errors to GEMDOS error codes
  - Support for mapping file names with 8-bit characters
    between host and Atari encodings (umlauted chars etc)
  - Program header (TT-RAM) allocate flags support
- CPU:
  - update WinUAE CPU core version from 2.3 -> 2.8.1 -> 3.0 -> 3.1
    - MMU emulation fixed
    - instruction/data cache emulation
    - better 68020/30 prefetch pipeline
    - cycle accuracy, etc.
  - in 68000 mode, remove some un-allowed <ea> for CMPI, BTST and TST
  - check for address error when new PC is set at the end of RTE, RTS and RTR
  - fix "move.b an,<ea>", it's not allowed and should give illegal instruction
  - improve stack frame for bus error and address error
  - allow bus control only for 030
    (i.e. prevent TOS forcing 16Mhz at boot with higher CPU levels)
- Memory: