@@ -1232,7 +1232,8 @@ void DebugUI_Exceptions(int nr, long pc)
 		{ EXCEPT_ZERODIV,   "Div by zero" },		/* 5 */
 		{ EXCEPT_CHK,       "CHK" },			/* 6 */
 		{ EXCEPT_TRAPV,     "TRAPV" },			/* 7 */
-		{ EXCEPT_PRIVILEGE, "Privilege violation" }	/* 8 */
+		{ EXCEPT_PRIVILEGE, "Privilege violation" },	/* 8 */
+		{ EXCEPT_TRACE,     "Trace" }			/* 9 */
 	};
 	nr -= 2;
 	if (nr < 0  || nr >= ARRAYSIZE(ex))
